--- a/css/style.less
+++ b/css/style.less
@@ -18,10 +18,28 @@ input, textarea, select, button{
 span{
     font-weight:bold;
 }
+.join{
+    padding: 0 40px 0 80px;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    background-color: #00a1e4;
+    position: relative;
 
+    &:after{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        content:'';
+        right: 10%;
+        bottom: 29%;
+        background: url(../images/intro.png) no-repeat 0 0;
+        z-index: 10;
+    }
+}
 
 .page-header{
-    overflow: hidden;
+    height:60px;
     
     .logo{
         background: url(../images/logoSAP.png) no-repeat 0 0;
@@ -41,14 +59,90 @@ span{
     .search{
         float:right;
         margin:13px 20px 0 0;
+		padding: 5px;
+		transition: all 100ms ease-out 1000ms;
+        position: relative;
+        
+        /**/
+        
+        .popup{
+            display: none;
+            position: absolute;
+            width: 300px;
+            padding: 20px;
+            top: 100%;
+            right: 0;
+            z-index: 10;
+            background-color: #f0ae15;
+            border: 1px solid #498af3;
+
+            form{
+                display: block;
+                overflow: hidden;
+
+                .search-text{
+                    padding: 5px 10px;
+                    border-radius: 5px;
+                    width: 78%;
+                }
+
+                .search-submit{
+                    border-radius: 5px;
+                    padding: 5px 10px;
+                    float: right;
+                }
+            }
+        }
+        &:hover, &:active{
+            transition: all 500ms ease-out 100ms;
+            .popup{
+                display: block;
+            }
+        }
+        
     }
     
     .menu-navigation{
         float: right;
         margin:17px 10px 0 0;
+        position: relative;
+        transition: all 500ms ease-out 100ms;
         
         ul{
             display:none;
+            position: absolute;
+            width: 600px;
+            top: 110%;
+            right: -10px;
+            z-index: 10;
+            background-color: white;
+            border: 1px solid #498af3;
+            font-size: 25px;
+            font-weight: bold;
+            
+            li{
+                border-bottom: 1px solid #c9c9c9;
+                
+                a{
+                    display: block;
+                    padding:30px;
+                    text-decoration: none;
+                    color: black;
+                    width: inherit;
+                    height: inherit;
+                }
+                
+                a:hover{
+                    color: white;
+                    background-color: #f0ae15;
+                }
+            }
+        }
+        &:hover, &:active{
+            transition: all 500ms ease-out 100ms;
+            ul{
+                display: block;
+            }
         }
     }
 }
@@ -183,14 +277,296 @@ span{
 }
 
 .partners_startups{
-    background-image: url(../images/bg_promt-mobile.png) no-repeat 0 0;
+    background: url(../images/bg_promt-mobile.png) no-repeat 0 0;
+    font-size: 22px;
+    padding: 50px 30px 1px 30px;
     
     .block{
-        margin:55px 30px 0;
+        margin-bottom: 50px;
+        background-color: #fff;
 
-        .block-name{
-            font-size: 36px;
+        .info-part{
+            padding: 45px 40px 15px;
+            
+            .block-name{
+                font-size: 36px;
+            }
+        }
+        
+        .info{
+            font-size: 54px;
+            color: #f0ab00;
+            padding-top: 40px;
+        }
+        
+        .species{
+            padding: 0 40px 20px;
+            background-color: black;
+            color: white;
+            
+        }
+        
+        p{
+            padding: 20px 0px;
+        }
+        
+        a{
+            text-decoration: none;
+        
         }
     }
 }
 
+.logo_partners{
+    h2{
+        font-size: 54px;
+        font-weight:500;
+        padding: 45px 30px;
+    }
+    
+    .slide-wrapper{
+        background-color: #f1f1f1;
+        padding:70px 80px 40px;
+        
+        
+        .bx-wrapper {
+            .bx-prev {
+                left: -5px;
+            }
+            .bx-next {
+	           right: 5px;
+            }
+            
+            .bx-pager.bx-default-pager{
+                top:-10%;
+                right:-18%;
+            }
+            
+            .bxslider{
+
+                li{
+                    padding:70px 45px 25px;
+                    font-size: 25px;
+
+                    h4{
+                        font-size: 25px;
+                        padding-top: 100px;
+                    }
+
+                    .slide-image{
+                    width: 340px;
+                    height: 173px;
+
+                        img{
+                            height: inherit;
+                            margin: 0 auto;
+                        }
+                    }   
+
+                    p{
+                        padding: 10px 0 30px;
+                        border-bottom: 3px solid #c9c9c9;
+                    }
+
+                    .links-down{
+                        position: relative;
+
+                        a{
+                            display: inline-block;
+                            margin: 20px 0 0;
+                            text-decoration: none;
+                            color: #00a1e4;
+                            font-weight: bold;
+                            overflow: hidden;
+                        }
+
+                        .more{
+                            position: relative;
+                            padding:1px;
+                            display: block;
+                            
+                            &:after{
+                                position: absolute;
+                                width: 22px;
+                                height: 20px;
+                                content:'';
+                                top:30%;
+                                left:65px;
+                                background: url(../images/logos/triangle.png) no-repeat 0 0;
+                                z-index: 10;
+                            }
+                            
+                            &:active, &:hover{
+                                .logo_partners .slide-wrapper .unvisiable{
+                                    display: block;
+                                }
+                            }
+                        }
+
+                        .quote{
+                            position: absolute;
+                            bottom: -5px;
+                            right:13%;
+                            background: url(../images/logos/icon-quote.png) no-repeat 0 0;
+                            float: right;
+                            width: 50px;
+                            height: 46px;
+                            padding-right: 20px;
+                        }
+
+                        .video{
+                            position: absolute;
+                            bottom:-5px;
+                            right:0;
+                            background: url(../images/logos/icon-video.png) no-repeat 0 0;
+                            float: right;
+                            width: 45px;
+                            height: 44px;
+                        }
+                    }
+                }
+            }
+        }
+        .unvisiable{
+            display: none;
+            font-size: 25px;
+            background-color: white;
+            padding: 50px 40px;
+            margin: 0 -50px;
+            position: relative;
+                
+            .title{
+                display: block;
+                font-size: 34px;
+            }
+            
+            span{
+                display: block;
+                padding: 20px 0 15px;
+            }
+                
+            p{
+                display: block;
+                padding: 0px 0 35px;
+            }
+            
+            a{
+                text-decoration: none;
+                color: #00a1e4;
+                font-weight: bold;
+                position: relative;
+                padding-left: 50%;
+                
+                &:after{
+                    position: absolute;
+                    width: 84px;
+                    height: 84px;
+                    content:'';
+                    bottom: -30px;
+                    right:-95px;
+                    background: url(../images/logos/play-button.png) no-repeat 0 0;
+                    z-index: 10;
+                }
+            }
+            
+            &:before{
+                position: absolute;
+                width: 45px;
+                height: 25px;
+                content:'';
+                top:-25px;
+                left: 48%;
+                background: url(../images/logos/rectangle.png) no-repeat 0 0;
+                z-index: 10;
+            }
+        }
+    }
+}
+/*.logo_partners .slide-wrapper:active, .logo_partners .slide-wrapper:hover{
+    .unvisiable{
+        display: block;
+    }
+}*/
+
+.already_partner{
+    font-size: 25px;
+    
+    .title{
+        font-size: 36px;
+        font-weight: bold;
+        margin: 90px 30px 0;
+        padding:35px;
+        border-left: 20px solid #f1ab00;
+    }
+    
+    P{
+        padding:20px 105px 40px;
+    }
+    
+    a{
+        text-decoration: none;
+        
+        .join{
+            padding: 35px 30px;
+            margin-bottom: 60px;
+        }
+    }
+}
+
+.contact-bar{
+    font-size: 26px;
+    font-weight: bold;
+    overflow: hidden;
+    padding: 45px 0;
+    border-top: 2px solid #c9c9c9;
+    
+    .phone{
+        float: left;
+        padding-left: 100px;
+        position: relative;
+        
+        &:before{
+            position: absolute;
+            width: 55px;
+            height: 55px;
+            content:'';
+            top: -30%;
+            left: 30px;
+            background: url(../images/phone.png) no-repeat 0 0;
+            z-index: 10;
+        }
+    }
+    .email{
+        float: right;
+        padding: 0 100px;
+        position: relative;
+        
+        &:before{
+            position: absolute;
+            width: 69px;
+            height: 43px;
+            content:'';
+            top: -30%;
+            left: 10px;
+            background: url(../images/mail.png) no-repeat 0 0;
+            z-index: 10;
+        }
+    }
+}
+
+.page-footer{
+    background-color: black;
+    color: white;
+    padding: 30px 50px;
+    font-weight: 500;
+    
+    a{
+        color: #00a1e4;
+        font-size: 22px;
+    }
+    
+    p{
+        font-size: 20px;
+        padding-top: 20px;
+    }
+}
