--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -16,7 +16,7 @@
 
 .bx-wrapper {
 	position: relative;
-	margin: 0 auto 60px;
+	margin: 0 auto;
 	padding: 0;
 	*zoom: 1;
 }
@@ -80,7 +80,7 @@
 
 .bx-wrapper .bx-pager.bx-default-pager{
     position: absolute;
-    top:5%;
+    top:2%;
     right:5%;
 }
 
